Lilac: VAF based filter.