@@ -1,7 +1,7 @@
 package com.hartwig.hmftools.lilac.fragment;
 
-import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_NUCLEOTIDE_EVIDENCE_FACTOR;
-import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_NUCLEOTIDE_HIGH_QUAL_EVIDENCE_FACTOR;
+import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_EVIDENCE_FACTOR;
+import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_HIGH_QUAL_EVIDENCE_FACTOR;
 
 import java.util.List;
 import java.util.Map;
@@ -14,15 +14,15 @@ import com.hartwig.hmftools.lilac.utils.Nucleotide;
 
 public final class NucleotideFragmentQualEnrichment
 {
-    public static List<Fragment> qualityFilterFragments(
-            double minEvidence, double minHighQualEvidence, final List<Fragment> fragments, final List<Fragment> highQualFrags)
+    public static List<Fragment> qualityFilterFragments(int minEvidenceDepth, double minEvidenceFactor, double minHighQualEvidenceFactor,
+            final List<Fragment> fragments, final List<Fragment> highQualFrags)
     {
         // fragments are all in nucleotide-space
 
         // filter fragments so that each nucleotide has at least 1 base at or above the min-qual threshold, and
         // X fragments (minEvidence) at that base with any qual
-        SequenceCount highQualCounts = SequenceCount.nucleotides(minHighQualEvidence, highQualFrags);
-        SequenceCount rawCounts = SequenceCount.nucleotides(minEvidence, fragments);
+        SequenceCount highQualCounts = SequenceCount.nucleotides(minEvidenceDepth, minHighQualEvidenceFactor, highQualFrags);
+        SequenceCount rawCounts = SequenceCount.nucleotides(minEvidenceDepth, minEvidenceFactor, fragments);
 
         return fragments.stream().map(x -> applyQualityFilter(x, highQualCounts, rawCounts)).collect(Collectors.toList());
     }
@@ -40,9 +40,9 @@ public final class NucleotideFragmentQualEnrichment
             Nucleotide nucleotide = entry.getValue();
             String fragmentNucleotide = entry.getValue().bases();
 
-            List<String> highQualitySequences = highQualityCount.getMinCountOrVafSequences(locus, DEFAULT_MIN_NUCLEOTIDE_HIGH_QUAL_EVIDENCE_FACTOR);
-            List<String> rawSequences = rawCount.getMinCountOrVafSequences(locus, DEFAULT_MIN_NUCLEOTIDE_EVIDENCE_FACTOR);
-            List<String> allowedSequences = highQualitySequences.stream().filter(x -> rawSequences.contains(x)).collect(Collectors.toList());
+            List<String> highQualitySequences = highQualityCount.getMinCountOrVafSequences(locus, DEFAULT_MIN_HIGH_QUAL_EVIDENCE_FACTOR);
+            List<String> rawSequences = rawCount.getMinCountOrVafSequences(locus, DEFAULT_MIN_EVIDENCE_FACTOR);
+            List<String> allowedSequences = highQualitySequences.stream().filter(rawSequences::contains).toList();
 
             if(allowedSequences.contains(fragmentNucleotide))
             {
